@@ -57,6 +57,7 @@ Eight Ball (Free Play+)
 Eight Ball Deluxe (Player 2/4 Bonus Countdown Bugfix)
 Elvira and the Party Monsters LF-1 (French)
 Evel Knievel (Free Play+)
+Flash Gordon (French Vocalizer Sound and Free Play variant)
 Freedom (Free Play+ rev. 07 and 20)
 Gilligan's Island L-8
 Heavy Metal Meltdown (German)
